--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@nger/core",
-    "version": "1.2.9",
+    "version": "1.3.6",
     "description": "> TODO: description",
     "author": "imeepos <1037483576@qq.com>",
     "homepage": "https://github.com/meepobrother/nger-core#readme",
@@ -29,6 +29,18 @@
         "url": "https://github.com/meepobrother/nger-core/issues"
     },
     "dependencies": {
-        "@nger/di": "^1.2.2"
+        "@nger/decorator": "^1.1.5",
+        "@nger/di": "^1.3.1",
+        "@types/cors": "^2.8.6",
+        "compression": "^1.7.4",
+        "cookie-parser": "^1.4.4",
+        "cookie-session": "^1.3.3",
+        "cors": "^2.8.5",
+        "errorhandler": "^1.5.1"
+    },
+    "devDependencies": {
+        "@types/express": "^4.17.2",
+        "express": "^4.17.1",
+        "express-session": "^1.17.0"
     }
 }
