--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@nger/core",
-    "version": "1.3.6",
+    "version": "1.4.3",
     "description": "> TODO: description",
     "author": "imeepos <1037483576@qq.com>",
     "homepage": "https://github.com/meepobrother/nger-core#readme",
@@ -30,17 +30,6 @@
     },
     "dependencies": {
         "@nger/decorator": "^1.1.5",
-        "@nger/di": "^1.3.1",
-        "@types/cors": "^2.8.6",
-        "compression": "^1.7.4",
-        "cookie-parser": "^1.4.4",
-        "cookie-session": "^1.3.3",
-        "cors": "^2.8.5",
-        "errorhandler": "^1.5.1"
-    },
-    "devDependencies": {
-        "@types/express": "^4.17.2",
-        "express": "^4.17.1",
-        "express-session": "^1.17.0"
+        "@nger/di": "^1.3.1"
     }
 }
