--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
     "lerna": "^3.13.1"
   },
   "dependencies": {
+    "@nger/core": "^1.7.7",
+    "@nger/rx.effects": "^1.0.2",
+    "@nger/rx.store": "^1.0.1",
+    "@types/express": "^4.17.2",
+    "express": "^4.17.1",
     "ts-node": "^8.5.2",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^3.7.2"
