--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "lerna": "^3.13.1"
   },
   "dependencies": {
-    "@nger/core": "^1.7.7",
+    "@nger/core": "^1.8.20",
+    "@nger/di": "^1.5.13",
     "@nger/rx.effects": "^1.0.2",
     "@nger/rx.store": "^1.0.1",
     "@types/express": "^4.17.2",
